--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 server.port=8081
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/activiti7?serverTimezone=GMT%2B8&useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+
+mybatis.configuration.mapUnderscoreToCamelCase=true
+logging.level.com.example.mybatis.mapper=debug
+
+spring.main.allow-bean-definition-overriding=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_security_test?serverTimezone=GMT%2B8&useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
+#  存放mybatis映射文件的位置
+mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
+#  存放实体类文件的位置
+mybatis.type-aliases-package=com.example.mybatis.entity
